# Parallel-algorithms-for-the-analysis-and-synthesis-of-data

./: .gitignore  README.md
lab1/: CMakeLists.txt  main.cpp  utils.h
lab1/result/Atomic/: Atomic_10.csv  Atomic_12.csv  Atomic_14.csv  Atomic_16.csv  Atomic_2.csv  Atomic_4.csv  Atomic_6.csv  Atomic_8.csv
lab1/result/Critical/: Critical_10.csv  Critical_12.csv  Critical_14.csv  Critical_16.csv  Critical_2.csv  Critical_4.csv  Critical_6.csv  Critical_8.csv
lab1/result/Lock/: Lock_10.csv  Lock_12.csv  Lock_14.csv  Lock_16.csv  Lock_2.csv  Lock_4.csv  Lock_6.csv  Lock_8.csv
lab1/result/Reduction/: Reduction_10.csv  Reduction_12.csv  Reduction_14.csv  Reduction_16.csv  Reduction_2.csv  Reduction_4.csv  Reduction_6.csv  Reduction_8.csv
lab1/result/Serial/: Serial_1.csv
lab1/results/: Atomic_10.csv  Atomic_12.csv  Atomic_14.csv  Atomic_16.csv  Atomic_18.csv  Atomic_2.csv  Atomic_20.csv  Atomic_22.csv  Atomic_24.csv  Atomic_26.csv  Atomic_28.csv  Atomic_30.csv  Atomic_32.csv  Atomic_4.csv  Atomic_6.csv  Atomic_8.csv  Critical_10.csv  Critical_12.csv  Critical_14.csv  Critical_16.csv  Critical_18.csv  Critical_2.csv  Critical_20.csv  Critical_22.csv  Critical_24.csv  Critical_26.csv  Critical_28.csv  Critical_30.csv  Critical_32.csv  Critical_4.csv  Critical_6.csv  Critical_8.csv  Lock_10.csv  Lock_12.csv  Lock_14.csv  Lock_16.csv  Lock_18.csv  Lock_2.csv  Lock_20.csv  Lock_22.csv  (+25 more)
lab2/: C.txt  CMakeLists.txt  main.cpp  mpi_algo1.cpp  mpi_algo2.cpp
lab2/include/: utils.h
lab2/input/: A.txt  B.txt
lab2/output/: C_mpi1.txt  C_mpi2.txt  C_serial.txt
